gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/staticforeach4.d
version https://git-lfs.github.com/spec/v1
oid sha256:f512fe256ad74a4073b767aa2ba6d94f94d932fb5667a50945987f48233520d0
size 544
